--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,10 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/challenge/challenge"
+    "pages/challenge/challenge",
+    "pages/farm/farm",
+    "pages/share/share",
+    "pages/end/end"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
