--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/donation/donation"
+    "pages/donation/donation",
+    "pages/restaurant/restaurant"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
