--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/donation/donation",
-    "pages/restaurant/restaurant"
+    "pages/restaurant/restaurant",
+    "pages/rank/rank"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
