updated the most recent UI

--- a/project.config.json
+++ b/project.config.json
@@ -20,7 +20,7 @@
     "uploadWithSourceMap": true,
     "compileHotReLoad": false,
     "useMultiFrameRuntime": false,
-    "useApiHook": false,
+    "useApiHook": true,
     "babelSetting": {
       "ignore": [],
       "disablePlugins": [],
@@ -34,7 +34,7 @@
   },
   "appid": "wxed73d2401d1411a7",
   "projectname": "hungry24",
-  "libVersion": "2.8.1",
+  "libVersion": "2.13.1",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
   "cloudfunctionTemplateRoot": "cloudfunctionTemplate",
