--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/donation/donation",
     "pages/restaurant/restaurant",
-    "pages/rank/rank"
+    "pages/rank/rank",
+    "pages/play/play"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
